# NorthMail

./: .gitignore  Cargo.toml  README.md  TODO-flathub.md  claude.md  meson.build
.claude/: settings.local.json
.github/workflows/: flatpak.yml
build-aux/: cargo-sources.json  com.petrariu.NorthMail.json  meson.build  org.northmail.NorthMail.json
crates/northmail-auth/: Cargo.toml
crates/northmail-auth/examples/: test_both.rs  test_goa.rs
crates/northmail-auth/src/: error.rs  goa.rs  lib.rs  oauth2.rs  secrets.rs  xoauth2.rs
crates/northmail-core/: Cargo.toml
crates/northmail-core/src/: account.rs  database.rs  error.rs  lib.rs  sync.rs
crates/northmail-graph/: Cargo.toml
crates/northmail-graph/src/: client.rs  error.rs  lib.rs  types.rs
crates/northmail-gtk/: Cargo.toml  build.rs
crates/northmail-gtk/src/: application.rs  i18n.rs  idle_manager.rs  imap_pool.rs  main.rs  window.rs
crates/northmail-gtk/src/widgets/: folder_sidebar.rs  message_list.rs  message_view.rs  mod.rs
crates/northmail-imap/: Cargo.toml
crates/northmail-imap/examples/: test_both.rs  test_gmail.rs
crates/northmail-imap/src/: client.rs  error.rs  folder.rs  lib.rs  message.rs  oauth2.rs  simple_client.rs
crates/northmail-smtp/: Cargo.toml
crates/northmail-smtp/src/: client.rs  error.rs  lib.rs  msgraph.rs
data/: com.petrariu.NorthMail.desktop.in  com.petrariu.NorthMail.gschema.xml  com.petrariu.NorthMail.metainfo.xml  org.northmail.NorthMail.desktop  org.northmail.NorthMail.desktop.in  org.northmail.NorthMail.gschema.xml  org.northmail.NorthMail.metainfo.xml  resources.gresource.xml
data/icons/hicolor/: index.theme
po/: POTFILES  de.po  fr.po  meson.build  northmail.pot
po/locale/de/LC_MESSAGES/: northmail.mo
po/locale/fr/LC_MESSAGES/: northmail.mo
