[package]
name = "northmail-auth"
description = "Authentication module for NorthMail - OAuth2/PKCE and GNOME Online Accounts"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
oauth2 = { workspace = true }
zbus = { workspace = true }
libsecret = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
