[package]
name = "northmail-core"
description = "Core business logic, sync engine, and storage for NorthMail"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
mail-parser = { workspace = true }

northmail-auth = { workspace = true }
northmail-imap = { workspace = true }
northmail-smtp = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
