[package]
name = "northmail-gtk"
description = "GTK4/libadwaita UI for NorthMail"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "northmail"
path = "src/main.rs"

[features]
default = ["webkit"]
webkit = ["dep:webkit6"]

[dependencies]
tokio = { workspace = true }
gtk4 = { workspace = true }
libadwaita = { workspace = true }
webkit6 = { workspace = true, optional = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
async-std = "1.12"
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
chrono = "0.4"
zbus = { workspace = true }
mail-parser = { workspace = true }

notify-rust = { workspace = true }

northmail-core = { workspace = true }
northmail-auth = { workspace = true }
northmail-imap = { workspace = true }
northmail-smtp = { workspace = true }
northmail-graph = { workspace = true }
regex = "1.12.3"
urlencoding = "2.1.3"
gettext-rs = "0.7"
